syntax = "proto3";

package com.example.internalapi.request.user.find_all.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/user.proto";

message FindAllUsersRequest {

}

message FindAllUsersResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.UserList users = 1;
  }
}
